...
                  ),
                  const Spacer(),
                  if (!last)
                    Semantics(
                      container: true,
                      button: true,
                      label: 'Skip',
                      onTap: widget.onDone,
                      excludeSemantics: true,
                      child: GestureDetector(
                        onTap: widget.onDone,
                        behavior: HitTestBehavior.opaque,
                        child: Text(
...
